--- a/app/src/main/res/layout/activity_verify_phone.xml
+++ b/app/src/main/res/layout/activity_verify_phone.xml
@@ -1,60 +1,74 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/parent"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".VerifyPhoneActivity">
 
+
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/info"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="На ваш номер выслано СМС с кодом. \n Введите данный код для регистрации \n и входа в систему."
-        app:layout_constraintBottom_toTopOf="@id/verification_code"
-        app:layout_constraintHorizontal_bias="0.495"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginTop="200dp"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:gravity="center"/>
+        android:layout_marginTop="100dp"
+        android:layout_centerHorizontal="true"
+        android:textAlignment="center"
+        android:textSize="15sp"
+        />
 
-    <EditText
-        android:id="@+id/verification_code"
-        android:layout_width="wrap_content"
+    <com.rengwuxian.materialedittext.MaterialEditText
+        android:id="@+id/verificationCode"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="24dp"
-        android:ems="10"
-        android:hint="Введите код сюда"
-        android:inputType="text"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"
-        tools:layout_editor_absoluteX="99dp" />
+        android:layout_below="@id/info"
+        android:layout_marginLeft="100dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginRight="100dp"
+        android:hint="Введите код сюда..."
+        android:inputType="number|textEmailAddress"
+        android:textAlignment="center"
+        android:textSize="15sp" />
 
     <Button
-        android:id="@+id/signin_btn"
+        android:id="@+id/sign_in"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="ВОЙТИ"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/verification_code"
-        app:layout_constraintVertical_bias="0.118"
-        tools:layout_editor_absoluteX="143dp" />
+        android:layout_below="@id/verificationCode"
+        android:background="@drawable/btn_design"
+        android:textColor="@android:color/white"
+        android:layout_marginTop="20dp"
+        android:layout_centerHorizontal="true"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:text="ВОЙТИ" />
 
-    <ProgressBar
-        android:id="@+id/progressBar2"
-        style="?android:attr/progressBarStyle"
+    <TextView
+        android:id="@+id/no_code"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:paddingTop="80dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/signin_btn"
-        android:visibility="gone"/>
+        android:text="Не пришел код?"
+        android:layout_marginTop="80dp"
+        android:layout_centerHorizontal="true"
+        android:textAlignment="center"
+        android:textSize="15sp"
+        android:layout_below="@id/sign_in"
+        />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <Button
+        android:id="@+id/resend"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/no_code"
+        android:background="@drawable/btn_design"
+        android:textColor="@android:color/white"
+        android:layout_marginBottom="50dp"
+        android:layout_marginTop="20dp"
+        android:layout_centerHorizontal="true"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:text="ПЕРЕОТПРАВИТЬ" />
+
+</RelativeLayout>
