--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/parent"
+    android:gravity="center"
     android:layout_gravity="center_horizontal"
     tools:context=".MainActivity">
 
@@ -13,7 +14,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Для регистрации введите номер телефона"
-        android:layout_marginTop="200dp"
         android:layout_centerHorizontal="true"
         android:textAlignment="center"
         android:textSize="15sp"
@@ -52,7 +52,6 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="100dp"
-        android:layout_marginBottom="100dp"
         android:layout_below="@id/register_btn" />
 
 </RelativeLayout>
