1) Layout_height should be checked on agreement_details.xml in order to show information properly.
2) If "1" is done in "AgreementDetailsAdapter" in "holder.recyclerView.setLayoutManager(new LinearLayoutManager(context, LinearLayoutManager.HORIZONTAL, false));" HORIZONTAL should be changed to VERTICAL

3) HORIZONTAL is used to see results of compilation in the app.

4) Call me! :)

--- a/app/src/main/res/layout/activity_basic_login.xml
+++ b/app/src/main/res/layout/activity_basic_login.xml
@@ -10,7 +10,7 @@
     <com.hanks.passcodeview.PasscodeView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/passcode_view"
+        android:id="@+id/passcode_view2"
         android:background="#4CAF50"
         app:firstInputTip="Введите ваш PIN"
         app:correctStateColor="@android:color/holo_green_light"
