--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,49 +9,72 @@
     android:layout_gravity="center_horizontal"
     tools:context=".MainActivity">
 
-    <TextView
-        android:id="@+id/info"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Для регистрации введите номер телефона"
-        android:layout_centerHorizontal="true"
-        android:textAlignment="center"
-        android:textSize="15sp"
-         />
-
-    <com.rengwuxian.materialedittext.MaterialEditText
-        android:id="@+id/phoneNum"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/info"
-        android:layout_marginLeft="100dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginRight="100dp"
-        android:hint="0555555555"
-        android:inputType="number|textEmailAddress"
-        android:textAlignment="center"
-        android:textSize="15sp" />
+        android:id="@+id/linearLayoutVertical1"
+        android:layout_height="match_parent"
+        android:gravity="center_horizontal"
+        android:visibility="invisible"
+        android:orientation="vertical">
 
-    <Button
-        android:id="@+id/register_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/phoneNum"
-        android:background="@drawable/btn_design"
-        android:textColor="@android:color/white"
-        android:layout_marginTop="20dp"
-        android:layout_centerHorizontal="true"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
-        android:text="РЕГИСТРАЦИЯ" />
+        <TextView
+            android:id="@+id/info"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="200dp"
+            android:text="Для регистрации введите номер телефона"
+            android:textAlignment="center"
+            android:textSize="15sp" />
 
-    <ProgressBar
-        android:id="@+id/progressBar"
-        style="?android:attr/progressBarStyle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="100dp"
-        android:layout_below="@id/register_btn" />
+        <com.rengwuxian.materialedittext.MaterialEditText
+            android:id="@+id/phoneNum"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="100dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginRight="100dp"
+            android:hint="0555555555"
+            android:inputType="number|textEmailAddress"
+            android:textAlignment="center"
+            android:textSize="15sp" />
+
+        <Button
+            android:id="@+id/register_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/btn_design"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:text="РЕГИСТРАЦИЯ"
+            android:textColor="@android:color/white" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:visibility="visible"
+        android:id="@+id/linearLayoutVertical2"
+        android:orientation="vertical">
+
+        <ProgressBar
+            android:id="@+id/progressBar"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="150dp" />
+
+        <TextView
+            android:id="@+id/info2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:paddingLeft="100dp"
+            android:paddingRight="100dp"
+            android:paddingTop="50dp"
+            android:text="Проверка возможности автоматического входа. Подождите." />
+    </LinearLayout>
 
 </RelativeLayout>
