--- a/app/src/main/res/layout/paymentdetails.xml
+++ b/app/src/main/res/layout/paymentdetails.xml
@@ -2,8 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:weightSum="5"
+    android:layout_height="wrap_content"
+    android:gravity="center"
+    android:weightSum="4"
     android:id="@+id/paymentDetailItem">
 
     <TextView
@@ -11,7 +12,7 @@
         android:gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="2"
+        android:layout_weight="1"
         android:text="Дата" />
 
     <TextView
